--- a/proto_new/proto_new/proto_new.vcxproj
+++ b/proto_new/proto_new/proto_new.vcxproj
@@ -76,6 +76,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DocumentId.pb.cc" />
     <ClCompile Include="proto_new.cpp" />
   </ItemGroup>
   <ItemGroup>
