--- a/proto_new/proto_new/proto_new.vcxproj.filters
+++ b/proto_new/proto_new/proto_new.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="proto_new.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="DocumentId.pb.cc">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
